# TrajOpt

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILD.bazel  README.md  WORKSPACE.bazel  bazelisk
bindings/: BUILD.bazel  test_interface_pybind.cpp  test_trajopt_interface.py  test_trajopt_planner.py  trajopt_interface.cpp  trajopt_planner_pybind.cpp
config/: test.yaml
config/urdf_files/: rs020n.urdf
framework/: BUILD.bazel  controller.hpp  obstacle_manager.hpp  planner.hpp  user_command.hpp
framework/cccb_trajopt/: cccb_traj_manager.cpp  cccb_traj_manager.hpp  cccb_traj_planner.cpp  cccb_traj_planner.hpp  cccb_trajopt_solver.cpp  cccb_trajopt_solver.hpp  no_obstacle_manager.hpp  obstacle_manager.cpp  obstacle_manager.hpp  rtcl_obstacle_manager.cpp  rtcl_obstacle_manager.hpp  simple_controller.cpp  simple_controller.hpp  test_interface.cpp  test_interface.hpp  test_interface_nocol.cpp  test_interface_nocol.hpp
simulator/: main_pybullet_sim.py  setup_paths.py  test_trajopt_interface.py  test_trajopt_planner.py  trajopt_interface.py
simulator/configs/: ra830a.py  ra830b.py  ra830l.py  rl030a.py  rl030b.py
simulator/configs/urdf_files/: franka_panda.info  franka_panda.urdf
simulator/point_cloud_data_generator/: main.py
simulator/utils/: interface_wrapper.py  pybullet_simulator.py  pybullet_util.py
src/test/: BUILD.bazel  cccb_spline_test.cc
test/: BUILD.bazel  cccb_spline_test.cc  cccb_trajopt_test.cc  cccb_trajopt_with_rtcl_test.cc  json_utils.h  lp_solver_test.cc  pinocchio_test.cc  qp_solver_test.cc
test/testdata/planned_path/a/: jp1.txt  jp2.txt
test/testdata/planned_path/b/: jp1.txt  jp2.txt
