workspace(name = "trajopt")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")

# Rules
http_archive(
    name = "bazel_skylib",
    sha256 = "18ae58793e9036305e02333f6d59c9e0ea73e6d066d874c04bb83a1c5c9ac4a7",
    strip_prefix = "bazel-skylib-872e9b06e18ae8ba2897cb65b9aaa172aa6279f3",
    url = "https://github.com/bazelbuild/bazel-skylib/archive/872e9b06e18ae8ba2897cb65b9aaa172aa6279f3.tar.gz",
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

http_archive(
    name = "rules_foreign_cc",
    sha256 = "ff5b7cdb650377b5baf358e38abf7d849395add601116393b16e722ffb33eb4b",
    strip_prefix = "rules_foreign_cc-34fa6a796d6933cc0529950fee313579cd0d8c51",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/34fa6a796d6933cc0529950fee313579cd0d8c51.tar.gz",
)
load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
rules_foreign_cc_dependencies()

############################
## rossy_utils
# eigen
load("//rossy_utils/thirdparty-bazel/eigen:repository.bzl", "eigen_repository")
eigen_repository(version="3.4.0")
# # pinocchio
load("//rossy_utils/thirdparty-bazel/pinocchio:repository.bzl", "pinocchio_repository")
pinocchio_repository(version="2.6.10")
# Generate local_config_clang repository and configure clang toolchain.
load("//rossy_utils/thirdparty-bazel/clang:clang_configure.bzl", "clang_autoconf")
clang_autoconf(
    name = "local_config_clang",
    version = "14",
)
############################
# HiGHS
git_repository(
    name = "rules_python",
    tag = "0.31.0",
    remote = "https://github.com/bazelbuild/rules_python.git",
)

load("@rules_python//python:repositories.bzl", "py_repositories")
py_repositories()

# Protobuf
git_repository(
    name = "com_google_protobuf",
    tag = "v26.1",
    remote = "https://github.com/protocolbuffers/protobuf.git",
)

# Load common dependencies.
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

# ZLIB
new_git_repository(
    name = "zlib",
    build_file = "@com_google_protobuf//:third_party/zlib.BUILD",
    tag = "v1.2.11",
    remote = "https://github.com/madler/zlib.git",
)
http_archive(
    name = "highs",
    sha256 = "5ff96c14ae19592d3568e9ae107624cbaf3409d328fb1a586359f0adf9b34bf7",
    strip_prefix = "HiGHS-1.7.2",
    url = "https://github.com/ERGO-Code/HiGHS/archive/v1.7.2/HiGHS-1.7.2.tar.gz",
)
############################

############################
## Ext. tools
http_archive(
    name = "com_google_googletest",
    sha256 = "ae91b02dbc0816f23b86c771b28699dfb15c0791752b18aa475ad2cc5f4e1cfb",
    strip_prefix = "googletest-a1cc8c55195661a58ad60c3bb062a0b9c302710d",
    url = "https://github.com/google/googletest/archive/a1cc8c55195661a58ad60c3bb062a0b9c302710d.tar.gz",
)

