load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "trajopt_interface",
    srcs = ["trajopt_interface.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//framework:cccb_trajopt", 
    ],
    # linkopts = ["-lpython3.11"],
)

py_library(
    name = "trajopt_interface",
    data = [":trajopt_interface.so"],
)

py_test(
    name = "test_trajopt_interface",
    srcs = ["test_trajopt_interface.py"],
    deps = [
        ":trajopt_interface"
    ],
)

