load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "trajopt_planner",
    srcs = ["trajopt_planner_pybind.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//framework:cccb_trajopt",
        # "//rtcl/rtcl:rtcl_wrapper",
        # "//rtcl:rtcl_h"
    ],
    # linkopts = ["-lpython3.11"],
)

py_library(
    name = "trajopt_planner",
    data = [":trajopt_planner.so"],
)

py_test(
    name = "test_trajopt_planner",
    srcs = ["test_trajopt_planner.py"],
    deps = [
        ":trajopt_planner"
    ],
)

