load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_test(
    name = "cccb_spline_test",
    srcs = ["cccb_spline_test.cc"],
    deps = [
        "//rossy_utils:rossy_utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "pinocchio_test",
    srcs = ["pinocchio_test.cc"],
    deps = [
        "//rossy_utils:rossy_utils",
        "//rossy_utils:robot_system",
        "@com_google_googletest//:gtest_main",
    ],
)

